# RAG-APP

./: .gitignore  README.Docker.md  README.md  compose.yaml
.github/workflows/: quality_checks.yaml
app/: .dockerignore  .gitignore  Dockerfile  README.Docker.md  README.md  pyproject.toml
app/src/: app.py  main.py
app/src/app/api/v1/: collections.py  documents.py  embed.py  rag.py  system.py
app/src/app/core/: __init__.py  lifespan.py
app/src/app/services/: __init__.py  collections.py  rag.py  text_processing.py
app/src/app/utils/: __init__.py  network.py
app/src/utils/: const.py  loaders.py
db/: README.md
embedder/: Dockerfile  README.md
ui/: .dockerignore  .gitignore  Dockerfile  README.Docker.md  README.md  pubspec.yaml
ui/config/: nginx.conf
ui/lib/: main.dart
