[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "qdrant-client>=1.16.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
