[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "qdrant-client>=1.16.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "types-aiofiles>=25.1.0.20251011",
]
